# memexai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PRODUCT_PLAN.md  README.md  ROADMAP.md  compose.yml  package.json
.github/workflows/: publish.yml  release.yml  unit-tests.yml
apps/benchmark/: package.json
apps/demo-agent/: README.md  package.json
apps/service/: package.json  tsconfig.json
apps/website/: README.md  next.config.mjs  package.json
docs/: access-logs.md  architecture.md  gtm-content-plan.md  hackathon-deck.md  migrations.md  publishing.md  revisions.md  scopes.md  two-tool-agentic-memory-implementation.md
docs/research/: market-2026.md
examples/anthropic/: package.json
examples/vercel-ai/: package.json
product/: LAUNCH.md  ROADMAP.md  persona.md
product/specs/: 01-python-sdk.md  02-smart-context.md  03-mcp-server.md  04-pii-hooks.md  05-agentic-ingest.md  06-agentic-recall.md  07-memory-compaction.md  08-bookkeeping.md  (+2 more)
scripts/: build-and-publish.mjs  clean-rebuild.sh  docker-publish.sh  setup-vertex-env.sh
sdks/python/: README.md  pyproject.toml
sdks/python/memexai/: __init__.py  _db.py  _hooks.py  _migrations.py  _paths.py  _pii.py  _tools.py  client.py  errors.py  memex.py  tool_definitions.py  types.py
sdks/python/memexai/adapters/: __init__.py  crewai.py  langchain.py  llamaindex.py
sdks/python/tests/: conftest.py  test_adapters.py  test_client.py  test_memex.py  test_migrations.py  test_paths.py  test_postgres_integration.py  test_tools.py
tmp/: test-container.mjs  test-containerless.mjs
(+132 files in other folders)
