[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memexai"
version = "0.1.0"
description = "Python SDK for MemexAI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asyncpg>=0.29.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
]
