[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memexai"
version = "0.1.0"
description = "Python SDK for MemexAI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
langchain = [
    "langchain>=0.2.0",
]
llamaindex = [
    "llama-index-core>=0.10.0",
]
crewai = [
    "crewai>=0.30.0; python_version >= '3.10' and python_version < '3.14'",
]
adapters = [
    "langchain>=0.2.0",
    "llama-index-core>=0.10.0",
    "crewai>=0.30.0; python_version >= '3.10' and python_version < '3.14'",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
]

[tool.setuptools.packages.find]
include = ["memexai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
